test/conformance/chainsaw/validate/clusterpolicy/cornercases/apply-on-deletion/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-apply-on-deletion 
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
