test/conformance/chainsaw/validate/clusterpolicy/cornercases/apply-on-deletion/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-apply-on-deletion  
spec:
  background: true
  rules:
  - name: validate-nodeport
    match:
      any:
      - resources:
          kinds:
          - Service
    validate:
      failureAction: Enforce
      message: "Services of type NodePort are not allowed."
      pattern:
        spec:
          =(type): "!NodePort"
