test/conformance/chainsaw/validate/clusterpolicy/cornercases/apply-on-deletion/01-cluster-policy.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: cluster-policy
spec:
  timeouts: {}
  try:
  - apply:
      file: policy.yaml
  - assert:
      file: policy-ready.yaml
