test/conformance/chainsaw/validate/clusterpolicy/cornercases/apply-on-deletion/03-path-service.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: path-service
spec:
  timeouts: {}
  try:
  - script:
      content: |
        kubectl patch service podinfo -p '{"metadata":{"finalizers":["bburky.com/hax"]}}' -n apply-on-deletion-ns
        kubectl delete service podinfo --wait=false -n apply-on-deletion-ns
