test/conformance/chainsaw/validate/clusterpolicy/cornercases/apply-on-deletion/06-remove-finalizer.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: remove-finalizer
spec:
  timeouts: {}
  try:
  - script:
      content: |
        kubectl patch service podinfo -p '{"metadata":{"finalizers":null}}' -n apply-on-deletion-ns
