test/conformance/chainsaw/validate/clusterpolicy/cornercases/apply-on-deletion/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: apply-on-deletion
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: cpol-apply-on-deletion
  - name: step-02
    try:
    - apply:
        file: ns.yaml
    - apply:
        file: service.yaml
    - assert:
        file: service.yaml
  - name: step-03
    try:
    - script:
        content: |
          kubectl patch service podinfo -p '{"metadata":{"finalizers":["bburky.com/hax"]}}' -n apply-on-deletion-ns
          kubectl delete service podinfo --wait=false -n apply-on-deletion-ns
  - name: step-04
    try:
    - script:
        content: "if kubectl patch service podinfo -p '{\"spec\":{\"type\":\"NodePort\",\"ports\":[{\"port\":9898,\"nodePort\":32000}]}}'
          -n apply-on-deletion-ns\nthen \n  echo \"Tested failed. The service type
          cannot be changed to NodePort\"\n  exit 1 \nelse \n  echo \"Test succeeded.
          The service update is blocked\"\n  exit 0\nfi\n"
  - name: step-05
    try:
    - apply:
        file: chainsaw-step-05-apply-1-1.yaml
  - name: step-06
    try:
    - script:
        content: |
          kubectl patch service podinfo -p '{"metadata":{"finalizers":null}}' -n apply-on-deletion-ns
